# uauauiua

./: .eslintrc.json  Cargo.toml  README.md  index.html  main.ua  package.json  pnpm-lock.yaml  prelude.ua  tsconfig.json  vite.config.ts
src/: App.tsx  Code.tsx  CustomWavesurferPlayer.tsx  Player.tsx  StackPlayer.tsx  VarPlayer.tsx  limited_backend.rs  main.rs  proxy.ts  recording.rs  tui.rs  types.ts  uauauiua.rs  uiua_extension.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs  uiua_wrapper.rs  utility.rs  watcher_wrapper.rs
