[package]
name = "uauauiua"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
hound = "3.5.1"
ratatui = "0.29.0"
regex = "1.11.1"
rodio = {version = "0.20.1", features = ["tracing"]}
uiua = {version = "0.14.1", default-features = false, features = ["clipboard", "native_sys"]}
