[package]
name = "uauauiua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
hound = "3.5.1"
ratatui = "0.29.0"
rodio = {version = "0.20.1", features = ["tracing"]}

# TODO: change when a new version is released
uiua = {git = "https://github.com/uiua-lang/uiua.git", default-features = false, features = ["audio_encode", "clipboard", "fft", "native_sys"]}
