[package]
name = "uauauiua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
hound = "3.5.1"
indexmap = "2.9.0"
ratatui = "0.29.0"
rodio = {version = "0.20.1", features = ["tracing"]}
uiua = { version = "0.16.0-dev.2", default-features = false, features = ["batteries", "clipboard", "fft", "native_sys"], git = "https://github.com/uiua-lang/uiua.git" }
